# homeworks

./: 2mainA.cpp  2mainB.cpp  2mainC.cpp  2mainCtest.cpp  2mainD.cpp  football_team.cpp  main1.cpp  mainA.cpp  source (1).cpp  task_1_1.cpp  task_2_2.cpp  test_tcp_client.py
shad/algorithms/homework/: CMakeLists.txt  football_crew  football_crew.cpp  mainA  mainA.cpp  mainC  mainC.cpp  mainD  mainD.cpp  task_1_1  task_1_1.cpp  testMainD  testMainD.cpp
shad/c_course/: 01_string.cpp  01_task  01_task.cpp  02_task  02_task.cpp  03_task  03_task.cpp  11_task  11_task.cpp  12_task  12_task.cpp  13_task  13_task.cpp  21_task  21_task.cpp  22_task  22_task.cpp  23_task  23_task.cpp  24_task.cpp  51_task  51_task.cpp  53_task.cpp  example.cpp  example1  example1.cpp
shad/c_course/data/: text.txt
shad/python_course/classwork/: server.py
shad/python_course/classwork/corpus/: client.py  crawler.py  server.py
shad/python_course/homework/: 51_task.py  52_task.py  53_task.py  broken_module.py
test_cython/: Test.cpp  Test.pyx  setup.py
